--- a/week3/week3.vcxproj.filters
+++ b/week3/week3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="func1.cpp">
+    <ClCompile Include="cards.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
