added bubblesort and selectsort and 2darrays

--- a/week3/week3.vcxproj.filters
+++ b/week3/week3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="functions_and_arrays.cpp">
+    <ClCompile Include="mdarrays.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
