--- a/week3/week3.vcxproj
+++ b/week3/week3.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="functions_and_arrays.cpp" />
+    <ClCompile Include="mdarrays.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
