more 2d arrays and pointers and mem allocation

--- a/week3/week3.vcxproj.filters
+++ b/week3/week3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="mdarrays.cpp">
+    <ClCompile Include="function_pointer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
