added circle and rectangle classes

--- a/week3/week3.vcxproj
+++ b/week3/week3.vcxproj
@@ -19,7 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="structs.cpp" />
+    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="circledemo.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Circle.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
