Added player code, gas code and swap with pointers function

--- a/week3/week3.vcxproj
+++ b/week3/week3.vcxproj
@@ -19,11 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Circle.cpp" />
-    <ClCompile Include="circledemo.cpp" />
+    <ClInclude Include="GasTank.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Circle.h" />
+    <ClCompile Include="GasTank.cpp" />
+    <ClCompile Include="GasTank_demo.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
