--- a/week3/week3.vcxproj
+++ b/week3/week3.vcxproj
@@ -19,12 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GasTank.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GasTank.cpp" />
-    <ClCompile Include="GasTank_demo.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerDemo.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
